refs #35: Add client for session API
