# src/app/api/models/session.ts
@@ -1,0 +1,17 @@
+/* tslint:disable */
+
+
+export class Session {
+    ends_at?: string;
+    id?: number;
+    author_user_id?: number;
+    name?: string;
+    code?: string;
+    starts_at?: string;
+    trail_id?: number;
+    has_leaderboard?: boolean;
+    welcome_message?: string;
+    goodbye_message?: string;
+    created_at?: string;
+    updated_at?: string;
+}
